<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_agregar_pierna"
                android:layout_width="@dimen/view_width_large"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="nuevaPierna"
                android:text="@string/agregar_pierna" />

            <Button
                android:id="@+id/btn_remove_leg"
                android:layout_width="@dimen/view_width_large"
                android:layout_height="wrap_content"
                android:onClick="quitarPierna"
                android:text="@string/remove_leg" />

            <Button
                android:id="@+id/btn_calcular"
                android:layout_width="@dimen/view_width_large"
                android:layout_height="wrap_content"
                android:text="@string/calcular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_width_height_medium"
            android:layout_marginStart="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_pierna" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@dimen/view_width_medium"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_origin" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="@dimen/view_width_medium"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_destiny" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_radio" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_mag_course" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_altitud" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_title"
                    android:gravity="center"
                    android:text="@string/text_wind" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="@dimen/view_width_small"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border_title"
                        android:gravity="center"
                        android:text="@string/text_direction" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="@dimen/view_width_small"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border_title"
                        android:gravity="center"
                        android:text="@string/text_velocity" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_indicated_air_speed" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_true_air_speed" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_true_course" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_true_heading" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_magnetic_heading" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_compass_heading" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_distance" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_ground_speed" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_estimated_time_enroute" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_estimated_time_arrival" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="@dimen/view_width_small"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_title"
                android:gravity="center"
                android:text="@string/text_fuel" />
        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">-->

            <!--</LinearLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="961dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/view_total_dist"
                        android:layout_width="@dimen/view_width_small"
                        android:layout_height="@dimen/view_width_height_small"
                        android:background="@drawable/border_bottom"
                        android:gravity="center"
                        android:text="@string/text_distance" />

                    <TextView
                        android:id="@+id/view_total_gs"
                        android:layout_width="@dimen/view_width_small"
                        android:layout_height="@dimen/view_width_height_small"
                        android:background="@drawable/border_bottom"
                        android:gravity="center"
                        android:text="@string/text_ground_speed" />

                    <TextView
                        android:id="@+id/view_total_ete"
                        android:layout_width="@dimen/view_width_small"
                        android:layout_height="@dimen/view_width_height_small"
                        android:background="@drawable/border_bottom"
                        android:gravity="center"
                        android:text="@string/text_estimated_time_enroute" />

                    <TextView
                        android:id="@+id/view_total_eta"
                        android:layout_width="@dimen/view_width_small"
                        android:layout_height="@dimen/view_width_height_small"
                        android:background="@drawable/border_bottom"
                        android:gravity="center"
                        android:text="@string/text_estimated_time_arrival" />

                    <TextView
                        android:id="@+id/view_total_fuel"
                        android:layout_width="@dimen/view_width_small"
                        android:layout_height="@dimen/view_width_height_small"
                        android:background="@drawable/border_bottom"
                        android:gravity="center"
                        android:text="@string/text_fuel" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</HorizontalScrollView>