<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_marginStart="2dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_leg"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_pierna" />

    <EditText
        android:id="@+id/edit_origin"
        android:layout_width="@dimen/view_width_medium"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_destiny"
        android:layout_width="@dimen/view_width_medium"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/edit_radio"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_mag_course"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_mag_course"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_altitud"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_direction"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_velocity"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_ias"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_tas"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_true_air_speed"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_true_course"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_true_course"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_true_heading"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_magnetic_heading"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_magnetic_heading"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_compass_heading"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_distance"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_distance"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_ground_speed"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_ground_speed"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_ete"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_estimated_time_enroute"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_eta"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_estimated_time_arrival"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_fuel"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_fuel"
        android:textAlignment="center" />

<!--    <Button
        android:id="@+id/btn_quitar_pierna"
        android:layout_width="@dimen/view_width_small"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/text_x" />-->

</LinearLayout>